Added Sintering Furnace with 2 cm:quartz_ore recipe

--- a/src/main/resources/assets/cm/lang/en_us.lang
+++ b/src/main/resources/assets/cm/lang/en_us.lang
@@ -8,6 +8,10 @@ item.quartz_sword.name=Quartz Sword
 
 // BLOCKS
 tile.quartz_ore.name=Quartz Ore
+tile.sintering_furnace.name=Sintering Furnace
 
 // CREATIVE TABS
 itemGroup.modMainTab=Custom Mod
+
+// TILE ENTITY
+container.macerator=Macerator
